# swarmtorch

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_EXPERIMENT_REPORT.md  LICENSE  README.md  __init__.py  main.py  pyproject.toml  summarize_results.py
.github/workflows/: ci.yml  release.yml
base/: generic_search.py  swarm_optimizer.py
benchmarks/: BENCHMARKS.md  COMPREHENSIVE_EXPERIMENT_REPORT.md  EXPERIMENT_REPORT.md  algo_registry.py  benchmark_hpo_research.py  compare_model_training.py  discover_all_algos.py  export_benchmark_json.py  feature_selection_benchmark.py  gen_hyper.py  generate_production_visuals.py  gpu_scaling_benchmark.py  gpu_vs_cpu_colab_benchmark.py  master_benchmark.py  nonconvex_benchmark.py  nonconvex_results.json  run_nonconvex.py  test_all_tuners.py  test_generic.py
bio_inspired/hyperparameter_tuning/: __init__.py
bio_inspired/model_training/: alo.py  bbo.py  sine_cosine.py
docs/: contributing.md  docs.json  index.md  mint.json
docs/api-reference/: base.md  evolutionary.md  swarm.md
docs/benchmarks/: benchmarks.md  methodology.md  results.md
docs/examples/: hyperparameter-search.md  image-classification.md  xor-classification.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: choosing-algorithm.md  custom-optimizer.md  gpu-training.md  hyperparameter-tuning.md  model-training.md
evolutionary/: __init__.py
evolutionary/hyperparameter_tuning/: __init__.py
evolutionary/model_training/: cem.py  de.py  (+1 more)
physics/: __init__.py
swarm/: __init__.py
swarmtorch/: __init__.py  summarize_results.py
tests/: test_generic_search.py
(+61 files in other folders)
