[project]
name = "swarmtorch"
version = "0.1.8"
description = "Professional PyTorch library for 120+ metaheuristic optimization algorithms (Swarm, Evolutionary, Physics, Hybrid)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Halleluyah Darasimi Oludele", email = "hallelx2@gmail.com" }
]
keywords = ["pytorch", "metaheuristics", "swarm-intelligence", "evolutionary-algorithms", "hpo", "gradient-free"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "build>=1.0.0",
]
benchmarks = [
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
]
all = [
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "build>=1.0.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarmtorch*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
